--- a/app/views/static_page/authentication_form.html.erb
+++ b/app/views/static_page/authentication_form.html.erb
@@ -1,6 +1,74 @@
 
+<%# navbar %>
+<div class="bs-component">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+         </button>
 
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index">Home
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navbar">Navbar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="footer">Footer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="authentication_form">Authentication form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="card">Card</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="banner">Banner</a>
+          </li>
+        </ul>
 
-<p class="bs-component">
-  <button type="button" class="btn btn-outline-primary">Login</button>
-</p>
+        <form class="d-flex">
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Log in</button>
+          <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Sign up</button>
+        </form>
+      </div>
+    </div> 
+  </nav>
+</div>
+
+<%# authentication_form %>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="bs-component">
+      <form>
+        <fieldset>
+          <legend>Sign in</legend>
+          <div class="form-group row">
+            <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+              <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1" class="form-label mt-4">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1" class="form-label mt-4">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+
+          <p class="bs-component">
+            <button type="button" class="btn btn-outline-primary">Login</button>
+          </p>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+</div>
