--- a/app/views/static_page/footer.html.erb
+++ b/app/views/static_page/footer.html.erb
@@ -1,17 +1,62 @@
 
-<div class="container">
-  <footer class="d-flex justify-content-between align-items-end py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-      </a>
-      <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Fauxbrite, Inc</span>
-    </div>
+<%# navbar %>
+<div class="bs-component">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+         </button>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-    </ul>
-  </footer>
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index">Home
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="navbar">Navbar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="footer">Footer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="authentication_form">Authentication form</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="card">Card</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="banner">Banner</a>
+          </li>
+        </ul>
+
+        <form class="d-flex">
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Log in</button>
+          <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Sign up</button>
+        </form>
+      </div>
+    </div> 
+  </nav>
+</div>
+
+<%# footer %>
+<div class="container">
+  <div class="end-footer">
+    <footer class="d-flex flex-wrap justify-content-between align-content-end py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Fauxbrite, Inc</span>
+      </div>
+
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      </ul>
+    </footer>
+  </div>
 </div>
