--- a/app/assets/stylesheets/cyborg.css
+++ b/app/assets/stylesheets/cyborg.css
@@ -656,6 +656,18 @@ progress {
   margin-left: auto;
 }
 
+.footer {
+  display:block;
+  margin: 5em 0;
+  margin-top: 10em;
+  margin-right: 0px;
+  margin-bottom: 0;
+  margin-left: 0px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 @media (min-width: 576px) {
   .container-sm, .container {
     max-width: 540px;
